.nf-test/tests/2fb9d28a2d10dcd9c20866507e3d3df8/meta/std.out
ERROR ~ Script compilation error
- file : /mnt/archive/work/slowney/IDT-NextflowComponents-PoC/.nf-test-2fb9d28a2d10dcd9c20866507e3d3df8.nf
- cause: Unexpected input: '{' @ line 23, column 10.
   workflow {
            ^

1 error

NOTE: If this is the beginning of a process or workflow, there may be a syntax error in the body, such as a missing or extra comma, for which a more specific error message could not be produced.

 -- Check '/mnt/archive/work/slowney/IDT-NextflowComponents-PoC/.nf-test/tests/2fb9d28a2d10dcd9c20866507e3d3df8/meta/nextflow.log' file for details
